# tts-qwen-local

./: .gitignore  README.md  input.txt  presets.yaml  pyproject.toml  requirements.txt  tts.py
docs/: cli-reference.md  library-api.md  optimization-plan.md  performance-results.md  tuning-guide.md
tests/: test_audio.py  test_backend_factory.py  test_bench.py  test_cli_helpers.py  test_config.py  test_progress.py  test_service.py  test_text.py
tts_qwen_local/: __init__.py  audio.py  bench.py  cli.py  config.py  progress.py  service.py  text.py
tts_qwen_local/backend/: __init__.py  base.py  factory.py  mlx_external.py  mlx_worker.py  qwen.py  types.py
